package modelo;

public interface Maquina {
    void setNext(Maquina maquina);
    boolean gestionar();
}
